    - Removed some unused stuff.
    - Refactored how I did spell and perk injections so I don't have to update lists every time Nolla adds something.
    - Fixed a bug where the starting wands could generate differntly if the player moved during game's initialization.
    - Removed Sauvojen Tuntija's ability to crash the game upon entering his second phase.

    - New Spells:
        - Blood Vacuum [Static Projectile]
        - Rottakanuuna [Projectile] (Thank you reversevere!)
        - Omega Death Cross [Projectile]
        - Full Mana Indicator [Passive]
        - Slow Shot [Modifier]

    - Balance Changes:
        - Glitter Bomb: mana 70 -> 10
        - Sauvojen Tuntija
            - Reduced Critical Damage Resistance 1.0 --> 0.8
            - Fixed an oversight reduced damage taken to 10%.
            - Wand of Healing and Shielding HP increased 1,000 --> 20,000
            - Wand of Healing and Shielding projectile damage taken reduced 1.0 --> 0.75
            - Fixed a bug where Sauvoje would not spawn copied player wands properly in 3rd phase.
            - Copied player wands HP increased 6,250 --> 10,000
            - Copied player wands projectile damage take reduced 1.0 --> 0.5


Beta Build 06 Feb 2023
    - Holy Mountain's Alchemy Station now works with powder sacks
    - Changed Add Mana spell/s to hopefully improve balance 
    - Removed "Chainsaw" and "Add Mana" from tower spell shop
    - Added "Spark bolt with timer and expiration trigger", "Black Hole Shot", and "Summon Hämis" to tower spell shop
    - Tweaked rarities/spawn rates of tower spell shop spells
    - Organized my translation file so it's not a complete mess like my terraria chests
    - Potions and Powder Sacks now display their maximum capacity in their item's description
    - Hardened glass is now even harder
    - New Perk "Extra Potion and Powder Sack Capacity"
    - Potions and Sacks will not ingest materials until picked up by the player
    - Added colored smoke materials