@@ -223,9 +223,25 @@ function damage_received(damage)
 		local hit_box_comp = EntityGetFirstComponentIncludingDisabled(entity_id, "HitboxComponent")
 		EntitySetComponentIsEnabled(entity_id, hit_box_comp, false)
 
-		--Disable path finding comp so he just sits there during his wand spawning animation
-		local path_finding_comp = EntityGetFirstComponentIncludingDisabled(entity_id, "PathFindingComponent")
-		EntitySetComponentIsEnabled(entity_id, path_finding_comp, false)
+		--Note Priskip (22-1-2024): I forgot to disable this part too
+		-- --Disable path finding comp so he just sits there during his wand spawning animation
+		-- local path_finding_comp = EntityGetFirstComponentIncludingDisabled(entity_id, "PathFindingComponent")
+		-- EntitySetComponentIsEnabled(entity_id, path_finding_comp, false)
+
+		--Set his current position in var storage and lock him in place for a while
+		local ent_x, ent_y = EntityGetTransform(entity_id)
+		variable_storage_set_value(entity_id, "FLOAT", "rest_position_x", ent_x)
+		variable_storage_set_value(entity_id, "FLOAT", "rest_position_y", ent_y)
+		EntityAddComponent2(
+			entity_id,
+			"LuaComponent",
+			{
+				execute_on_added = true,
+				script_source_file = "mods/purgatory/files/entities/animals/boss_pit/lock_in_place.lua",
+				execute_every_n_frame = 1,
+				execute_times = 270
+			}
+		)
 
 		--Re-enable hitbox after summoning wands
 		EntityAddComponent2(
@@ -239,17 +255,17 @@ function damage_received(damage)
 			}
 		)
 
-		--Re-enable pathfinding after summoning wands
-		EntityAddComponent2(
-			entity_id,
-			"LuaComponent",
-			{
-				execute_on_added = false,
-				script_source_file = "mods/purgatory/files/entities/animals/boss_pit/reenable_pathfinding.lua",
-				execute_every_n_frame = 270,
-				remove_after_executed = true
-			}
-		)
+		-- --Re-enable pathfinding after summoning wands
+		-- EntityAddComponent2(
+		-- 	entity_id,
+		-- 	"LuaComponent",
+		-- 	{
+		-- 		execute_on_added = false,
+		-- 		script_source_file = "mods/purgatory/files/entities/animals/boss_pit/reenable_pathfinding.lua",
+		-- 		execute_every_n_frame = 270,
+		-- 		remove_after_executed = true
+		-- 	}
+		-- )
 
 		--Summon Wandghost with player's wand
 		EntityLoad("mods/purgatory/files/entities/animals/boss_pit/wand_ghost_mimic/wand_ghost_mimic.xml", x, y - 30)
